<resources>
    <string name="app_name">RTES-Admin</string>
    <string name="admin_dashboard">Admin Dashboard</string>
    <string name="bus_number">Bus Number</string>
    <string name="from">From</string>
    <string name="bus_type">Bus Type</string>
    <string name="to">To</string>
    <string name="submit">SUBMIT</string>
    <string name="stop_name">Stop Name</string>
    <string name="hh_mm_am_pm">HH:MM AM/PM</string>
</resources>